[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
  "E",     # pycodestyles
  "W",     # pycodestyles
  "F",     # pyflakes
  "B0",    # bugbear (all B0* checks enabled by default)
  "B904",  # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "UP",    # pyupgrade
  "I",     # isort
  "PGH",   # pygrep-hooks
]
# Remove E999 once pattern matching is supported
# https://github.com/charliermarsh/ruff/issues/282
ignore = ["E402", "E501", "E731", "E741", "E999"]
target-version = "py311"
