[metadata]
name = SRTrain
version = attr: SRT.__version__
author = ryanking13
author_email = def6488@gmail.com
url = https://github.com/ryanking13/SRT
description = SRT(Super Rapid Train) wrapper for python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = one, two
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/ryanking13/SRT/issues
    Changelog = https://github.com/ryanking13/SRT/blob/master/CHANGELOG.md

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    requests
    PyInquirer

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[options.entry_points]
console_scripts =
    srt-reserve = SRT.cli.reserve:main
